update progress monitor minor change

--- a/app/src/main/res/layout/fragment_create_zip.xml
+++ b/app/src/main/res/layout/fragment_create_zip.xml
@@ -228,7 +228,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
-                        android:indeterminate="true"
                         app:indicatorColor="#00B8D4"
                         android:visibility="gone"/>
 
@@ -238,6 +237,16 @@
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         app:indicatorColor="#00B8D4" />
+
+                    <TextView
+                        android:id="@+id/progressText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:layout_marginTop="10dp"
+                        android:text="10%"
+                        android:textSize="18sp"
+                        android:visibility="gone" />
 
                 </RelativeLayout>
 
