--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,15 @@
 <resources>
 
     <style name="MaterialButtonStyle" parent="Widget.Material3.Button.IconButton">
+    </style>
 
+    <!-- dialog style -->
+    <style name="MaterialDialog" parent="@style/ThemeOverlay.Material3.MaterialAlertDialog">
+        <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.ZipXtract.Dialog.Rounded</item>
+    </style>
+
+    <style name="ShapeAppearanceOverlay.ZipXtract.Dialog.Rounded" parent="">
+        <item name="cornerFamily">rounded</item>
+            <item name="cornerSize">10dp</item>
     </style>
 </resources>
