--- a/app/src/main/res/layout/seven_z_option_dialog.xml
+++ b/app/src/main/res/layout/seven_z_option_dialog.xml
@@ -59,6 +59,7 @@
         android:id="@+id/passwordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="textPassword"
         style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
         android:hint="@string/enter_password"/>
     </com.google.android.material.card.MaterialCardView>
