--- a/app/src/main/res/layout/zip_settings_dialog.xml
+++ b/app/src/main/res/layout/zip_settings_dialog.xml
@@ -131,10 +131,12 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/passwordEditText"
+                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-                android:hint="@string/enter_password"/>
+                android:hint="@string/enter_password"
+                android:hyphenationFrequency="none"
+                android:inputType="textPassword"/>
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
@@ -175,10 +177,17 @@
             android:layout_margin="5dp"/>
 
 
-        <com.google.android.material.card.MaterialCardView
+
+        <LinearLayout
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_margin="5dp">
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="wrap_content"
             app:cardCornerRadius="10dp"
             android:layout_margin="5dp"
+            android:layout_weight="8"
             style="@style/Widget.Material3.CardView.Outlined"
             android:layout_height="wrap_content">
 
@@ -192,5 +201,21 @@
                 android:inputType="number" />
         </com.google.android.material.card.MaterialCardView>
 
+            <com.google.android.material.card.MaterialCardView
+                style="@style/Widget.Material3.CardView.Outlined"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_margin="5dp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                app:cardCornerRadius="10dp">
+
+                <Spinner
+                    android:id="@+id/splitSizeUnitSpinner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:entries="@array/split_size_units" />
+            </com.google.android.material.card.MaterialCardView>
+        </LinearLayout>
 </LinearLayout>
 </ScrollView>
