--- a/app/src/main/res/layout/password_input_dialog.xml
+++ b/app/src/main/res/layout/password_input_dialog.xml
@@ -26,13 +26,30 @@
         android:layout_height="wrap_content"
         style="@style/Widget.Material3.CardView.Outlined">
 
-    <EditText
-        android:id="@+id/passwordInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-        android:hint="@string/enter_password"
-        android:autofillHints="password" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/passwordInput"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:inputType="textPassword"
+                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+                android:hint="@string/enter_password"
+                android:autofillHints="password" />
+
+            <ImageButton
+                android:id="@+id/showPasswordButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                style="@style/Widget.Material3.Button.IconButton"
+                android:src="@drawable/ic_visibility_off"
+                android:contentDescription="Show password" />
+
+        </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
