--- a/app/src/main/res/layout/seven_z_option_dialog.xml
+++ b/app/src/main/res/layout/seven_z_option_dialog.xml
@@ -27,80 +27,90 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        app:cardCornerRadius="10dp"
-        android:layout_margin="5dp"
-        style="@style/Widget.Material3.CardView.Outlined"
-        android:layout_height="wrap_content">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/archiveNameEditText"
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
+            app:cardCornerRadius="10dp"
+            android:layout_margin="5dp"
+            style="@style/Widget.Material3.CardView.Outlined"
+            android:layout_height="wrap_content">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/archiveNameEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+                android:hint="@string/enter_name_of_archive_optional"/>
+        </com.google.android.material.card.MaterialCardView>
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-            android:hint="@string/enter_name_of_archive_optional"/>
-    </com.google.android.material.card.MaterialCardView>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_marginTop="10dp"
-        android:text="@string/enter_password"
-        android:layout_margin="5dp"/>
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        app:cardCornerRadius="10dp"
-        android:layout_margin="5dp"
-        style="@style/Widget.Material3.CardView.Outlined"
-        android:layout_height="wrap_content">
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/passwordEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-        android:hint="@string/enter_password"/>
-    </com.google.android.material.card.MaterialCardView>
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:text="@string/compression_level"
-        android:layout_margin="5dp"/>
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        app:cardCornerRadius="10dp"
-        android:layout_margin="5dp"
-        style="@style/Widget.Material3.CardView.Outlined"
-        android:layout_height="wrap_content">
-        <Spinner
-            android:id="@+id/compressionSpinner"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            android:text="@string/enter_password"
+            android:layout_margin="5dp"/>
+        <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:padding="5dp"
-            android:entries="@array/compression_levels"
-            android:spinnerMode="dropdown"/>
+            app:cardCornerRadius="10dp"
+            android:layout_margin="5dp"
+            style="@style/Widget.Material3.CardView.Outlined"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/passwordEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPassword"
+                    android:layout_weight="1"
+                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+                    android:hint="@string/enter_password"/>
+                <ImageButton
+                    android:id="@+id/showPasswordButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    style="@style/Widget.Material3.Button.IconButton"
+                    android:src="@drawable/ic_visibility_off"
+                    android:contentDescription="Show password" />
+            </LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:text="@string/compression_level"
+            android:layout_margin="5dp"/>
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            app:cardCornerRadius="10dp"
+            android:layout_margin="5dp"
+            style="@style/Widget.Material3.CardView.Outlined"
+            android:layout_height="wrap_content">
+            <Spinner
+                android:id="@+id/compressionSpinner"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:padding="5dp"
+                android:entries="@array/compression_levels"
+                android:spinnerMode="dropdown"/>
 
-    </com.google.android.material.card.MaterialCardView>
+        </com.google.android.material.card.MaterialCardView>
 
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        app:cardCornerRadius="10dp"
-        android:layout_margin="5dp"
-        style="@style/Widget.Material3.CardView.Outlined"
-        android:layout_height="wrap_content">
-    <com.google.android.material.checkbox.MaterialCheckBox
-        android:id="@+id/solidCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/solid_compression"/>
-    </com.google.android.material.card.MaterialCardView>
-
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            app:cardCornerRadius="10dp"
+            android:layout_margin="5dp"
+            style="@style/Widget.Material3.CardView.Outlined"
+            android:layout_height="wrap_content">
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/solidCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/solid_compression"/>
+        </com.google.android.material.card.MaterialCardView>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -108,25 +118,21 @@
             android:textStyle="bold"
             android:text="@string/thread_count"
             android:layout_margin="5dp"/>
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
+            app:cardCornerRadius="10dp"
+            android:layout_margin="5dp"
+            style="@style/Widget.Material3.CardView.Outlined"
+            android:layout_height="wrap_content">
 
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        app:cardCornerRadius="10dp"
-        android:layout_margin="5dp"
-        style="@style/Widget.Material3.CardView.Outlined"
-        android:layout_height="wrap_content">
-
-
-        <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/threadCountEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
-        android:hint="@string/max_available_thread"
-        android:inputType="number"/>
-    </com.google.android.material.card.MaterialCardView>
-
-</LinearLayout>
-
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/threadCountEditText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
+                android:hint="@string/max_available_thread"
+                android:inputType="number"/>
+        </com.google.android.material.card.MaterialCardView>
+    </LinearLayout>
 </ScrollView>
