--- a/app/src/main/res/layout/password_input_dialog.xml
+++ b/app/src/main/res/layout/password_input_dialog.xml
@@ -18,38 +18,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp">
 
-    <com.google.android.material.card.MaterialCardView
+    <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Widget.Material3.CardView.Outlined">
+        app:endIconMode="password_toggle">
 
-        <LinearLayout
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/passwordInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/passwordInput"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:inputType="textPassword"
-                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-                android:hint="@string/enter_password"
-                android:autofillHints="password" />
-
-            <ImageButton
-                android:id="@+id/showPasswordButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                style="@style/Widget.Material3.Button.IconButton"
-                android:src="@drawable/ic_visibility_off"
-                android:contentDescription="Show password" />
-
-        </LinearLayout>
-    </com.google.android.material.card.MaterialCardView>
+            android:inputType="textPassword"
+            android:hint="@string/enter_password"
+            android:autofillHints="password" />
+    </com.google.android.material.textfield.TextInputLayout>
 </LinearLayout>
