--- a/app/src/main/res/layout/zip_option_dialog.xml
+++ b/app/src/main/res/layout/zip_option_dialog.xml
@@ -15,32 +15,52 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fitsSystemWindows="true"
     android:background="@color/md_theme_surface"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="5dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="10dp"
-        android:padding="5dp">
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="10dp">
 
-        <com.google.android.material.card.MaterialCardView
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="5dp"
+            android:text="@string/create_zip"/>
+
+        <com.google.android.material.progressindicator.LinearProgressIndicator
+            android:id="@+id/progressIndicator"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:visibility="gone"
+            android:indeterminate="true"/>
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/zipNameEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
                 android:hint="@string/enter_name_of_archive_optional"/>
-        </com.google.android.material.card.MaterialCardView>
+        </com.google.android.material.textfield.TextInputLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -53,13 +73,16 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
             android:layout_margin="5dp">
+
             <Spinner
                 android:id="@+id/compression_method_input"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:padding="5dp"/>
         </com.google.android.material.card.MaterialCardView>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -68,16 +91,20 @@
             android:layout_marginStart="5dp"
             android:layout_marginBottom="5dp"
             android:text="@string/compression_level"/>
+
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
             android:layout_margin="5dp">
+
             <Spinner
                 android:id="@+id/compression_level_input"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:padding="5dp"/>
         </com.google.android.material.card.MaterialCardView>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -86,10 +113,13 @@
             android:layout_marginStart="5dp"
             android:layout_marginBottom="5dp"
             android:text="@string/encryption_method"/>
+
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
             android:layout_margin="5dp">
+
             <Spinner
                 android:id="@+id/encryption_method_input"
                 android:layout_width="match_parent"
@@ -105,10 +135,13 @@
             android:layout_marginStart="5dp"
             android:layout_marginBottom="5dp"
             android:text="@string/encryption_strength"/>
+
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
             android:layout_margin="5dp">
+
             <Spinner
                 android:id="@+id/encryption_strength_input"
                 android:layout_width="match_parent"
@@ -124,38 +157,26 @@
             android:layout_marginTop="10dp"
             android:text="@string/enter_password"
             android:layout_margin="5dp"/>
-        <com.google.android.material.card.MaterialCardView
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            app:cardCornerRadius="10dp"
+            android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            style="@style/Widget.Material3.CardView.Outlined"
-            android:layout_height="wrap_content">
-            <LinearLayout
+            app:endIconMode="password_toggle">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/passwordEditText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/passwordEditText"
-                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-                    android:layout_width="0dp"                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="@string/enter_password"
-                    android:hyphenationFrequency="none"
-                    android:inputType="textPassword"/>
-                <ImageButton
-                    android:id="@+id/showPasswordButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    style="@style/Widget.Material3.Button.IconButton"
-                    android:src="@drawable/ic_visibility_off"
-                    android:contentDescription="Show password" />
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
+                android:hint="@string/enter_password"
+                style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
+                android:hyphenationFrequency="none"
+                android:inputType="textPassword"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
-            app:cardCornerRadius="10dp"
+            app:cardCornerRadius="5dp"
             android:layout_margin="5dp"
             style="@style/Widget.Material3.CardView.Outlined"
             android:layout_height="wrap_content">
@@ -163,10 +184,12 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
                 <com.google.android.material.checkbox.MaterialCheckBox
                     android:id="@+id/splitZipCheckbox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -193,23 +216,21 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_margin="5dp">
-            <com.google.android.material.card.MaterialCardView
-                android:layout_width="wrap_content"
-                app:cardCornerRadius="10dp"
-                android:layout_margin="5dp"
-                android:layout_weight="8"
-                style="@style/Widget.Material3.CardView.Outlined"
-                android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="8">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/splitSizeEditText"
-                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/_ten"
                     android:digits="1234567890"
+                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox.Dense"
+                    android:hint="@string/_ten"
                     android:inputType="number" />
-            </com.google.android.material.card.MaterialCardView>
+            </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.card.MaterialCardView
                 style="@style/Widget.Material3.CardView.Outlined"
@@ -218,25 +239,32 @@
                 android:layout_margin="5dp"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                app:cardCornerRadius="10dp">
+                app:cardCornerRadius="5dp">
+
                 <Spinner
                     android:id="@+id/splitSizeUnitSpinner"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:entries="@array/split_size_units" />
             </com.google.android.material.card.MaterialCardView>
-
         </LinearLayout>
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/okButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            style="@style/Widget.Material3.Button.TonalButton"
+            app:cornerRadius="5dp"
             android:text="@string/ok" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/cancelButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            style="@style/Widget.Material3.Button.TonalButton"
+            app:cornerRadius="5dp"
             android:text="@string/cancel" />
     </LinearLayout>
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
