--- a/app/src/main/res/layout/seven_z_option_dialog.xml
+++ b/app/src/main/res/layout/seven_z_option_dialog.xml
@@ -15,7 +15,7 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -45,6 +45,22 @@
             android:layout_margin="5dp"
             android:visibility="gone"
             android:indeterminate="true"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/toggleFileViewBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            app:cornerRadius="5dp"
+            style="@style/Widget.Material3.Button.TonalButton"
+            android:text="Show/Hide File Paths" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/filePathsRv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:visibility="gone" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -165,4 +181,4 @@
             style="@style/Widget.Material3.Button.TonalButton"
             android:text="@string/no_password" />
     </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+</ScrollView>
