--- a/app/src/main/res/layout/item_file.xml
+++ b/app/src/main/res/layout/item_file.xml
@@ -10,7 +10,7 @@
         android:id="@+id/file_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="5dp"
         android:alpha="0.7"
         android:text="TextView"
@@ -35,7 +35,7 @@
         android:layout_width="48dp"
         android:layout_height="48dp"
         style="@style/Widget.Material3.CardView.Outlined"
-        app:cardCornerRadius="3dp"
+        app:cardCornerRadius="5dp"
         android:layout_margin="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,6 +59,8 @@
         android:layout_marginTop="5dp"
         android:text="TextView"
         android:textSize="16sp"
+        android:ellipsize="middle"
+        android:singleLine="true"
         app:layout_constraintStart_toEndOf="@+id/card_view"
         app:layout_constraintTop_toTopOf="parent" />
 
